<resources>
    <string name="app_name">CurriculumVitaeApp</string>

    <string name="my_name">Álvaro de la Serna</string>
    <string name="title_activity_personal_information">PersonalInformationActivity</string>
    <string name="education">Education &amp; skills</string>
    <string name="experience">Experience</string>
    <string name="personal_info">Personal info</string>
    <string name="title_activity_experience">ExperienceActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_education">EducationActivity</string>
    <string name="question_call">Would you like to call Álvaro?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Exit</string>
    <string name="question_exit">Exit the application?</string>
    <string name="question_send_email">Would you like to send and email to Álvaro?</string>
    <string name="great">Great!</string>
    <string name="enter_contact_details">Please enter your contact details</string>
    <string name="OK">OK</string>
    <string name="empty_fields">There are empty fields</string>
    <string name="DNI">50765311-X</string>
    <string name="my_email_address">alvaro.delaserna@gmail.com</string>
    <string name="my_phone_number">(+34) 670-998-593</string>
    <string name="tapap">Tapap</string>
    <string name="progressive_blue">Progressive Blue Technology</string>
    <string name="technosite">Fundosa Technosite</string>

    <string name="birth_day">09-01-1988</string>
    <string name="madrid_spain">Madrid, Spain</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="phone_number">Phone number:</string>
    <string name="dni">DNI:</string>
    <string name="email">Email address:</string>
    <string name="name">Full name:</string>
    <string name="drivers_license">Driver\'s license:</string>
    <string name="b">B</string>
    <string name="highest_level_of_education">Highest level of education:</string>
    <string name="masters_degree">Master\'s degree</string>

    <string name="linkedin_url">https://es.linkedin.com/pub/alvaro-de-la-serna-martinez/67/b50/445</string>
    <string name="open_with">Open with:</string>
    <string name="my_address">C/ Juan Álvarez Mendizábal 46, 28008 Madrid, Spain</string>
    <string name="masters_multimedia">Master\'s degree in Multimedia and Communications</string>
    <string name="master_multimedia_date">September 2014 - June 2015</string>
    <string name="master_multimedia_data_science">Data Science</string>
    <string name="master_multimedia_url"><a href="http://www.uc3m.es/ss/Satellite/Postgrado/en/Detalle/Estudio_C/1413461930221/1371208956904/Master_s_Degreee_in_Multimedia_y_Communications">Click here to see the program</a></string>
    <string name="bachelor_audiovisual_systems_url"><a href="http://www.uc3m.es/ss/Satellite/Grado/en/Detalle/Estudio_C/1428666683091/1371212987094/Bachelor_s_Degree_in_Audiovisual_System_Engineering">Click here to see the program</a></string>
    <string name="master_multimedia_machine_learning">Applications of machine learning techniques to multimedia data</string>
    <string name="master_multimedia_tools">Tools:</string>
    <string name="bachelors_degree">Bachelor\'s Degree in Audiovisual Systems Engineering</string>
    <string name="bachelors_date">September 2010 - June 2014</string>
    <string name="bachelor_telecommunications_engineering">Telecommunications engineering</string>
    <string name="tapap_date">February 2015 - present</string>
    <string name="tapap_what_i_did">Lead Android Developer. I am in charge of making ideas come to life and bridging the gap between Production, Design and Programming departments.</string>
    <string name="progressive_date">November 2014 - February 2015</string>
    <string name="progressive_blue_wat_i_did">I was in charge of developing different types of Android applications depending on our clients\' needs, working with Eclipse.</string>
    <string name="technosite_date">June 2014 - August 2014</string>
    <string name="technosite_what_i_did">I participated in the design and development of a contextual help system working with OpenCV on Google Glass, as wellas a Gateway for the management of safety devices and environments for telecare using Raspberry Pi and NodeJS.</string>
</resources>
