<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/container_name"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_alignParentLeft="true"
                android:textColor="@android:color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:textSize="25sp"
                android:layout_below="@+id/textName"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_email_address"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_email_address"
                android:textSize="22sp"
                android:layout_below="@+id/email"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_phone_number"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_phone_number"
                android:textSize="25sp"
                android:layout_below="@+id/phone_number"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_highest_level_of_education"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/highest_level_of_education"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highest_level_of_education"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masters_degree"
                android:textSize="25sp"
                android:layout_below="@+id/highest_level_of_education"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_DNI"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/dni"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dni"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DNI"
                android:textSize="25sp"
                android:layout_below="@+id/dni"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_date_of_birth"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birth_day"
                android:textSize="25sp"
                android:layout_below="@+id/date_of_birth"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_place_of_birth"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/place_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_of_birth"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/madrid_spain"
                android:textSize="25sp"
                android:layout_below="@+id/place_of_birth"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/container_drivers_license"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/drivers_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drivers_license"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@android:color/black"
                android:layout_alignParentLeft="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/b1"
                android:textSize="25sp"
                android:layout_below="@+id/drivers_license"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>
