<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_name"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_name"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_email"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_email_address"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_phone"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_phone_number"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_address"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_address"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_id"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/DNI"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_date_of_birth"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/birth_day"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="1">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_driving_license"
                android:layout_weight="0.3"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/b"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="0.7"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
