<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/masters_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/logo_uc3m"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="0.3"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/masters_multimedia"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        style="@android:style/TextAppearance.Large"
                        android:textSize="@dimen/text_size"
                        android:textStyle="bold"
                        android:layout_weight="0.7" />
            </LinearLayout>
            <TextView
                android:id="@+id/master_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_url"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:gravity="end"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_date"
                style="@android:style/TextAppearance.Large"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_description"
                android:gravity="center"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_data_science"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_machine_learning"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_tools"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_python"
                    android:layout_weight="0.5"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_matlab"
                    android:layout_weight="0.5"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bachelors_degree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_uc3m"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.3"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/bachelors_degree"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    style="@android:style/TextAppearance.Large"
                    android:textSize="@dimen/text_size"
                    android:textStyle="bold"
                    android:layout_weight="0.7" />
            </LinearLayout>
            <TextView
                android:id="@+id/bachelor_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bachelor_audiovisual_systems_url"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:gravity="end"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bachelors_date"
                style="@android:style/TextAppearance.Large"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_description"
                android:gravity="center"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bachelor_telecommunications_engineering"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/master_multimedia_tools"
                style="@android:style/TextAppearance.Large"
                android:textSize="@dimen/text_size_description"
                android:layout_marginTop="5dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_matlab"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_android"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_html"
                    android:layout_weight="0.33"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_javascript"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_java"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_bash"
                    android:layout_weight="0.33"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:weightSum="1">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_sql"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_sqlite"
                    android:layout_weight="0.33"/>
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/icon_latex"
                    android:layout_weight="0.33"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>
