<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:id="@+id/top_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="horizontal"
        android:weightSum="100">
        <ImageView
            android:id="@+id/picture_of_me"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:src="@drawable/picture_of_me"
            android:layout_weight="40"
            android:layout_gravity="center_vertical"/>
        <RelativeLayout
            android:id="@+id/personal_info_container"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="60"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_name"
                android:gravity="center"
                style="@android:style/TextAppearance.Large"/>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/name"
                android:weightSum="1">
                <ImageButton
                    android:id="@+id/ic_action_call"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/action_call"
                    android:background="@android:color/transparent"/>
                <ImageButton
                    android:id="@+id/ic_action_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/action_email"
                    android:background="@android:color/transparent" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.65"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/button_show_personal_info"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background_switch"
            android:text="@string/personal_info"
            style="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"/>
        <TextView
            android:id="@+id/button_show_professional_experience"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background_switch"
            android:text="@string/experience"
            style="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"/>
        <TextView
            android:id="@+id/button_show_education"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_background_switch"
            android:text="@string/education"
            style="@android:style/TextAppearance.Medium"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"/>
    </LinearLayout>
</LinearLayout>
